--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Taustapildiga leht</title>
+  <title>Taustapildiga leht nupuga</title>
   <style>
-    /* --- LIHTNE STATIC HERO ---
-       Vaheta all URL "taust.jpg" oma pildi vastu.
-       Kui fail on samas kaustas, jäta lihtsalt nimi.
-    */
     html, body { height: 100%; margin: 0; }
     body { background: #000; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; }
 
@@ -18,26 +14,51 @@
       background-image: url("imeline.jpg"); /* ⬅️ PANE SIIA OMA PILT */
       background-position: center center;
       background-repeat: no-repeat;
-      background-size: cover; /* venib proportsiooni hoides üle ekraani */
+      background-size: cover;
     }
 
-    /* valikuline tumestus (võid kustutada) */
     .overlay { position: fixed; inset: 0; background: rgba(0,0,0,.35); }
 
-    /* sisu näidis (võid kustutada) */
     .content {
       position: relative; z-index: 10; min-height: 100dvh;
       display: grid; place-items: center; text-align: center; color: #fff;
       padding: 24px;
     }
-    
-    h1 { margin: 0 0 6px; font-size: clamp(28px,4vw,42px); }
-    p { margin: 0; opacity: .9; }
+    .card {
+      background: rgba(255,255,255,.06);
+      border: 1px solid rgba(255,255,255,.18);
+      border-radius: 20px; padding: 28px; backdrop-filter: blur(6px);
+      max-width: 420px; width: 100%;
+    }
+    h1 { margin: 0 0 16px; font-size: clamp(28px,4vw,42px); }
+    p { margin: 0 0 24px; opacity: .9; }
+
+    .btn {
+      display: inline-block;
+      padding: 12px 12px;
+      border-radius: 100px;
+      background: rgba(255,255,255,.2);
+      border: 1px solid rgba(255,255,255,.4);
+      color: #fff;
+      text-decoration: none;
+      font-weight: 600;
+      transition: background .2s;
+    }
+    .btn:hover { background: rgba(255,255,255,.35); }
   </style>
 </head>
 <body>
   <div class="bg" aria-hidden="true"></div>
   <div class="overlay" aria-hidden="true"></div>
 
+  <main class="content">
+    <div class="card">
+      <a href="https://et.wikipedia.org/wiki/Ovulatsioon" class="btn">Ovulatsioon</a>
+      <a href="https://et.wikipedia.org/wiki/Rasedus" class="btn">See teine asi</a>
+      <a href="https://et.wikipedia.org/wiki/Menstruatsioon#:~:text=Menstruatsioon%20ehk%20menses%20ehk%20menorröa,emakalimaskesta%20irdumine%2C%20mis%20avaldub%20menstruaalverejooksuna." class="btn">See kolmas asi</a>
+
+
+    </div>
+  </main>
 </body>
 </html>
