--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     .bg {
       position: fixed;
       inset: 0;
-      background-image: url("imeline.jpg"); /* ⬅️ PANE SIIA OMA PILT */
+      background-image: url("imeline2.jpg"); /* ⬅️ PANE SIIA OMA PILT */
       background-position: center center;
       background-repeat: no-repeat;
       background-size: cover;
